--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,1 +1,12 @@
-@import 'partials/base';
+/* ============================
+Created and maintained by Jordan Nicholson.
+Website: http://jordangraphics.co.uk/
+Linkedin: https://www.linkedin.com/in/jordan-nicholson/
+============================ */
+
+// app.scss @imports all the individul scss files
+
+// Main scss files for the grid to work
+@import "partials/variables";
+@import "partials/base";
+@import "partials/typography";
