--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,108 @@
+/* ============================
+Created and maintained by Jordan Nicholson.
+Website: http://jordangraphics.co.uk/
+Linkedin: https://www.linkedin.com/in/jordan-nicholson/
+============================ */
+/* BASE STYLES */
+/* Replace this line with the font you wish to @import */
+@import url("https://fonts.googleapis.com/css?family=Lato:300,900|Roboto:500&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
+body {
+  width: 100%;
+  height: 100%;
+  font-family: "Lato", Arial, Helvetica, sans-serif;
+  font-weight: 300;
+}
+
+.container {
+  max-width: 1620px;
+  height: 100%;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+a {
+  color: #2a2a2a;
+}
+a:visited {
+  color: #2a2a2a;
+}
+
+#float-right {
+  float: right;
+}
+
+#float-left {
+  float: left;
+}
+
+#text-align--center {
+  text-align: center;
+}
+
+#text-align--left {
+  text-align: left;
+}
+
+#text-align--right {
+  text-align: right;
+}
+
+@media only screen and (max-width: 600px) {
+  .hidden {
+    display: none;
+  }
+}
+/* TYPOGRAPHY */
+h1,
+.h1,
+h2,
+.h2 {
+  margin-top: 0;
+  margin-bottom: 0.5em;
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
+  font-weight: 500;
+  line-height: 1.5em;
+  color: #2a2a2a;
+}
+
+h3,
+.h3 {
+  margin-top: 0;
+  margin-bottom: 0.3em;
+  color: #2a2a2a;
+}
+
+p {
+  margin-bottom: 1em;
+  font-family: "Lato", Arial, Helvetica, sans-serif;
+  font-weight: 300;
+  font-size: 18px;
+  font-weight: 300;
+  line-height: 1.8em;
+}
+
+#strong {
+  font-weight: 900;
+}
+
+/* Home page type styles */
+.headline h1 {
+  font-size: 3em;
+  margin: 0 0 0.3em 0;
+}
+.headline h2 {
+  margin-bottom: 1em;
+}
+.headline p {
+  margin: 0 0 1em 0;
+  color: #2a2a2a;
+  font-weight: 300;
+}
 
 /*# sourceMappingURL=app.css.map */
