Added scss sheet for the game

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -10,3 +10,6 @@ Linkedin: https://www.linkedin.com/in/jordan-nicholson/
 @import "partials/variables";
 @import "partials/base";
 @import "partials/typography";
+
+// Styles for the game itself
+@import "partials/bingo-game";
