--- a/css/app.css
+++ b/css/app.css
@@ -5,7 +5,7 @@ Linkedin: https://www.linkedin.com/in/jordan-nicholson/
 ============================ */
 /* BASE STYLES */
 /* Replace this line with the font you wish to @import */
-@import url("https://fonts.googleapis.com/css?family=Lato:300,900|Roboto:500&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Luckiest+Guy|Roboto:500&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -14,9 +14,13 @@ Linkedin: https://www.linkedin.com/in/jordan-nicholson/
 
 body {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   font-family: "Lato", Arial, Helvetica, sans-serif;
   font-weight: 300;
+  background-image: url("../imgs/bingo-bg.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  backdrop-filter: blur(5px);
 }
 
 .container {
@@ -24,6 +28,7 @@ body {
   height: 100%;
   margin: 0 auto;
   padding: 0 20px;
+  position: relative;
 }
 
 a {
@@ -65,10 +70,11 @@ h2,
 .h2 {
   margin-top: 0;
   margin-bottom: 0.5em;
-  font-family: "Roboto", Arial, Helvetica, sans-serif;
-  font-weight: 500;
+  font-family: "Luckiest Guy", cursive;
+  font-weight: 400;
   line-height: 1.5em;
   color: #2a2a2a;
+  font-size: 3em;
 }
 
 h3,
@@ -80,10 +86,10 @@ h3,
 
 p {
   margin-bottom: 1em;
-  font-family: "Lato", Arial, Helvetica, sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 300;
   font-size: 18px;
-  font-weight: 300;
+  font-weight: 500;
   line-height: 1.8em;
 }
 
@@ -106,8 +112,45 @@ p {
 }
 
 /* BINGO GAME STYLES */
+.game-container {
+  width: 100%;
+  height: auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 #bingo-number {
-  font-size: 5em;
+  font-size: 12em;
+  font-weight: 700;
+  background-image: url("../imgs/bingo-ball.png");
+  background-repeat: no-repeat;
+  width: 451px;
+  height: 451px;
+  margin: 0.6em auto;
+  padding-top: 100px;
+}
+
+button {
+  min-width: 150px;
+  padding: 1em 2.5em;
+  background-color: #ffffff;
+  color: #2a2a2a;
+  font-size: 1.5em;
+  font-weight: 500;
+  border: none;
+  border-radius: 40px;
+  display: block;
+  margin: 0 auto;
+}
+button:hover {
+  cursor: pointer;
+}
+button.text--btn {
+  background-color: transparent;
+  color: #ffffff;
+  margin-top: 1em;
 }
 
 /*# sourceMappingURL=app.css.map */
