--- a/scss/partials/_base.scss
+++ b/scss/partials/_base.scss
@@ -1,7 +1,7 @@
 /* BASE STYLES */
 
 /* Replace this line with the font you wish to @import */
-@import url('https://fonts.googleapis.com/css?family=Lato:300,900|Roboto:500&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Luckiest+Guy|Roboto:500&display=swap');
 
 * {
     margin: 0;
@@ -11,9 +11,13 @@
 
 body {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     font-family: 'Lato', Arial, Helvetica, sans-serif;
     font-weight: 300;
+    background-image: url('../imgs/bingo-bg.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    backdrop-filter: blur(5px);
 }
 
 .container {
@@ -21,6 +25,7 @@ body {
     height: 100%;
     margin: 0 auto;
     padding: 0 20px;
+    position: relative;
 }
 
 // These are styles specific to this example and can be changed or removed for your needs
