--- a/scss/partials/_bingo-game.scss
+++ b/scss/partials/_bingo-game.scss
@@ -1,5 +1,43 @@
 /* BINGO GAME STYLES */
 
+.game-container {
+    width: 100%;
+    height: auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
 #bingo-number {
-    font-size: 5em;
+    font-size: 12em;
+    font-weight: 700;
+    background-image:url('../imgs/bingo-ball.png');
+    background-repeat: no-repeat;
+    width: 451px;
+    height: 451px;
+    margin: .6em auto;
+    padding-top: 100px;
+}
+
+button {
+    min-width: 150px;
+    padding: 1em 2.5em;
+    background-color: $white;
+    color: $black;
+    font-size: 1.5em;
+    font-weight: 500;
+    border: none;
+    border-radius: 40px;
+    display: block;
+    margin: 0 auto;
+    &:hover {
+        cursor: pointer;
+    }
+
+    &.text--btn {
+        background-color: transparent;
+        color: $white;
+        margin-top: 1em;
+    }
 }
