--- a/scss/partials/_typography.scss
+++ b/scss/partials/_typography.scss
@@ -6,10 +6,11 @@ h2,
 .h2 {
     margin-top: 0;
     margin-bottom: .5em;
-    font-family: 'Roboto', Arial, Helvetica, sans-serif;
-    font-weight: 500;
+    font-family: 'Luckiest Guy', cursive;
+    font-weight: 400;
     line-height: 1.5em;
     color: $black;
+    font-size: 3em;
 }
 
 h3,
@@ -21,10 +22,10 @@ h3,
 
 p {
     margin-bottom: 1em;
-    font-family: 'Lato', Arial, Helvetica, sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-weight: 300;
     font-size: $font-size;
-    font-weight: 300;
+    font-weight: 500;
     line-height: $line-height;
 }
 
