--- a/scss/partials/_bingo-game.scss
+++ b/scss/partials/_bingo-game.scss
@@ -12,7 +12,7 @@
 #bingo-number {
     font-size: 12em;
     font-weight: 700;
-    background-image:url('../imgs/bingo-ball.png');
+    background-image:url('../imgs/bingo-ball.svg');
     background-repeat: no-repeat;
     width: 451px;
     height: 451px;
